Fixed missing background image

--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -2,7 +2,7 @@
  */
 
 #list {
-  background-image: url('../images/tools-legal.svg');
+  background-image: url('../../images/tools-legal.svg');
   background-color: #0089c2;
   background-size: 400px auto;
   background-position: center 15px;
